spade-tests/src/snapshots/spade_tests__ast_lowering__generic_trait_used_without_param_spec.snap
---
source: spade-tests/src/ast_lowering.rs
---
trait X<T> {}
struct S {}
impl X for S {}


error: Raw use of generic trait X
  ┌─ testinput:3:6
  │
1 │ trait X<T> {}
  │       - Trait X defined here
2 │ struct S {}
3 │ impl X for S {}
  │      ^ Trait X used without specifying type parameters
